Barebones Info-page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
 </head>
 
 <body>
+  <div class="info-title">
+    <h1>Save the Earth!</h1>
+    <h1>Recycle!</h1>
+    <p>A webpage by Vin and James</p>
+  </div>
+  <div class="">
+    <h3>Why you should recycle</h3>
+    <p>Recycling is important!</p>
+    <h3>Why you should consider donating</h3>
+    <p>Help clean the Earth!</p>
+  </div>
+
+  <footer>
+    <a href="index.html">Info Page</a>
+    <a href="page2.html">Donation Page</a>
+  </footer>
+
 
 </body>
 </html>
