--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>Recycle!</h1>
     <p>A webpage by Vin and James</p>
   </div>
-  <div class="">
+  <div class="info-body">
     <h3>Why you should recycle</h3>
     <p>Recycling is important!</p>
     <h3>Why you should consider donating</h3>
@@ -26,8 +26,8 @@
   </div>
 
   <footer>
-    <a href="index.html">Info Page</a>
-    <a href="page2.html">Donation Page</a>
+    <a href="index.html" class="button">Info Page</a>
+    <a href="page2.html" class="button">Donation Page</a>
   </footer>
 
 
