populated page with no styling

--- a/index.html
+++ b/index.html
@@ -20,9 +20,44 @@
   </div>
   <div class="info-body">
     <h3>Why you should recycle</h3>
-    <p>Recycling is important!</p>
+    <p>
+      When a material is used to make something, it’s important that it breaks
+      down organically, can be reused, or recycled into something else.
+      Otherwise, that material only serves one purpose before it ends up in a
+      landfill long-term where it will not break down.<br> <br>
+      If waste is not recycled, it can negatively impact our environment in
+      many ways. Waste can emit greenhouse gases that contribute to global
+      warming and, therefore, climate change. Non-recycled waste can contribute
+      to air pollution, water pollution, and put animal lives and human lives at
+      risk. Alternatively, if we recycle, we can significantly reduce the amount
+      of pollution our waste creates.<br> <br>
+      Recycling is also crucial because of how waste can impact animals (and
+      consequently, humans because, you know, food chain). Waste can cause loss
+      of natural habitats and contributes to negative impacts like climate
+      change and global warming, which can also destroy animals’ natural
+      habitats. When animals — and other biological organisms — lose their
+      habitats, they can die off or starve.<br> <br>
+      Recycling also means using materials that have already been used, rather
+      than creating new raw materials. Since raw materials often come from our
+      most important forests, like rainforests for example, recycling can cut
+      back on the need for raw materials. Raw materials could also include
+      natural resources like timber, water, and minerals. When we cut back on
+      new materials, we can preserve natural habitats, forests, rainforests,
+      and give the Earth a chance to grow and heal.
+    </p>
     <h3>Why you should consider donating</h3>
-    <p>Help clean the Earth!</p>
+    <p>
+      Help keep the Earth clean and donate your used goods to local charities
+      to extend the life of your items. There are many worthy charities that
+      you can donate to, please consider donating and check out the charities
+      on our donation page. Please do not stand by and let dumps like this
+      continue to grow.
+    </p>
+  </div>
+
+  <div class="info-pics">
+    <img src="https://i.ytimg.com/vi/TJ9I3d0JX5c/maxresdefault.jpg"
+    alt="Garbage dump" width=640 height=360>
   </div>
 
   <footer>
