--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>Recycle!</h1>
     <p>A webpage by Vin and James</p>
   </div>
-  
+
   <div class="info-body">
     <h3>Why you should recycle</h3>
     <p>
@@ -63,7 +63,7 @@
 
   <footer>
     <a href="index.html" class="button">Info Page</a>
-    <a href="page2.html" class="button">Donation Page</a>
+    <a href="donate.html" class="button">Donation Page</a>
   </footer>
 
 
